--- a/jabla.CSharp.csproj
+++ b/jabla.CSharp.csproj
@@ -62,6 +62,12 @@
   <ItemGroup>
     <Compile Include="Assets\Assets\Scripts\CameraController.cs" />
     <Compile Include="Assets\Assets\Scripts\PlayerController.cs" />
+    <Compile Include="Assets\Assets\Scripts\TextBoxManager.cs" />
+    <Compile Include="Assets\Assets\Scripts\TextImporter.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\Assets\Text\Dialog Player.txt" />
+    <None Include="Assets\Assets\Text\NPC_Speech.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
 </Project>
