--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
      <Compile Include="Assets\Assets\Scripts\CameraController.cs" />
      <Compile Include="Assets\Assets\Scripts\PlayerController.cs" />
+     <Compile Include="Assets\Assets\Scripts\WorldDraw.cs" />
  <Reference Include="UnityEngine.Networking">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/Networking/UnityEngine.Networking.dll</HintPath>
  </Reference>
