--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -47,7 +47,11 @@
   <ItemGroup>
      <Compile Include="Assets\Assets\Scripts\CameraController.cs" />
      <Compile Include="Assets\Assets\Scripts\PlayerController.cs" />
+     <Compile Include="Assets\Assets\Scripts\TextBoxManager.cs" />
+     <Compile Include="Assets\Assets\Scripts\TextImporter.cs" />
      <Compile Include="Assets\Assets\Scripts\WorldDraw.cs" />
+     <None Include="Assets\Assets\Text\NPC_Speech.txt" />
+     <None Include="Assets\Assets\Text\Dialog Player.txt" />
  <Reference Include="UnityEngine.Networking">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/Networking/UnityEngine.Networking.dll</HintPath>
  </Reference>
