--- a/jabla.CSharp.csproj
+++ b/jabla.CSharp.csproj
@@ -60,10 +60,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Assets\Scripts\ActivateTextAtLine.cs" />
     <Compile Include="Assets\Assets\Scripts\CameraController.cs" />
     <Compile Include="Assets\Assets\Scripts\PlayerController.cs" />
     <Compile Include="Assets\Assets\Scripts\TextBoxManager.cs" />
     <Compile Include="Assets\Assets\Scripts\TextImporter.cs" />
+    <Compile Include="Assets\Assets\Scripts\WorldDraw.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Assets\Text\Dialog Player.txt" />
