--- a/jabla.CSharp.csproj
+++ b/jabla.CSharp.csproj
@@ -61,14 +61,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Assets\Scripts\ActivateTextAtLine.cs" />
+    <Compile Include="Assets\Assets\Scripts\BaseCharacters.cs" />
     <Compile Include="Assets\Assets\Scripts\CameraController.cs" />
+    <Compile Include="Assets\Assets\Scripts\Helper.cs" />
     <Compile Include="Assets\Assets\Scripts\PlayerController.cs" />
+    <Compile Include="Assets\Assets\Scripts\QuestGivers.cs" />
     <Compile Include="Assets\Assets\Scripts\TextBoxManager.cs" />
     <Compile Include="Assets\Assets\Scripts\TextImporter.cs" />
     <Compile Include="Assets\Assets\Scripts\WorldDraw.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Assets\Text\Dialog Player.txt" />
+    <None Include="Assets\Assets\Text\NPC2_Speech.txt" />
     <None Include="Assets\Assets\Text\NPC_Speech.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
