--- a/jabla.CSharp.csproj
+++ b/jabla.CSharp.csproj
@@ -55,6 +55,12 @@
     <Reference Include="UnityEngine.Networking">
       <HintPath>Library\UnityAssemblies\UnityEngine.Networking.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine.Networking">
+      <HintPath>Library\UnityAssemblies\UnityEngine.Networking.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.UI">
+      <HintPath>Library\UnityAssemblies\UnityEngine.UI.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEditor">
       <HintPath>Library\UnityAssemblies\UnityEditor.dll</HintPath>
     </Reference>
@@ -62,9 +68,13 @@
   <ItemGroup>
     <Compile Include="Assets\Assets\Scripts\ActivateTextAtLine.cs" />
     <Compile Include="Assets\Assets\Scripts\BaseCharacters.cs" />
+    <Compile Include="Assets\Assets\Scripts\Book.cs" />
     <Compile Include="Assets\Assets\Scripts\CameraController.cs" />
     <Compile Include="Assets\Assets\Scripts\Helper.cs" />
+    <Compile Include="Assets\Assets\Scripts\Items.cs" />
+    <Compile Include="Assets\Assets\Scripts\Key.cs" />
     <Compile Include="Assets\Assets\Scripts\PlayerController.cs" />
+    <Compile Include="Assets\Assets\Scripts\PlayerInfo.cs" />
     <Compile Include="Assets\Assets\Scripts\QuestGivers.cs" />
     <Compile Include="Assets\Assets\Scripts\TextBoxManager.cs" />
     <Compile Include="Assets\Assets\Scripts\TextImporter.cs" />
