--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -47,9 +47,13 @@
   <ItemGroup>
      <Compile Include="Assets\Assets\Scripts\ActivateTextAtLine.cs" />
      <Compile Include="Assets\Assets\Scripts\BaseCharacters.cs" />
+     <Compile Include="Assets\Assets\Scripts\Book.cs" />
      <Compile Include="Assets\Assets\Scripts\CameraController.cs" />
      <Compile Include="Assets\Assets\Scripts\Helper.cs" />
+     <Compile Include="Assets\Assets\Scripts\Items.cs" />
+     <Compile Include="Assets\Assets\Scripts\Key.cs" />
      <Compile Include="Assets\Assets\Scripts\PlayerController.cs" />
+     <Compile Include="Assets\Assets\Scripts\PlayerInfo.cs" />
      <Compile Include="Assets\Assets\Scripts\QuestGivers.cs" />
      <Compile Include="Assets\Assets\Scripts\TextBoxManager.cs" />
      <Compile Include="Assets\Assets\Scripts\TextImporter.cs" />
