Added door that can check if you have key and open if you do.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -50,10 +50,9 @@
      <Compile Include="Assets\Assets\Scripts\CameraController.cs" />
      <Compile Include="Assets\Assets\Scripts\Helper.cs" />
      <Compile Include="Assets\Assets\Scripts\Items\BaseItem.cs" />
-     <Compile Include="Assets\Assets\Scripts\Items\BasePotion.cs" />
      <Compile Include="Assets\Assets\Scripts\Items\Book.cs" />
-     <Compile Include="Assets\Assets\Scripts\Items\CreateNewPotion.cs" />
      <Compile Include="Assets\Assets\Scripts\Items\Key.cs" />
+     <Compile Include="Assets\Assets\Scripts\Items\Potion.cs" />
      <Compile Include="Assets\Assets\Scripts\PlayerController.cs" />
      <Compile Include="Assets\Assets\Scripts\PlayerInfo.cs" />
      <Compile Include="Assets\Assets\Scripts\QuestGivers.cs" />
