--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -54,6 +54,7 @@
      <Compile Include="Assets\Assets\Scripts\Items\Inventory.cs" />
      <Compile Include="Assets\Assets\Scripts\Items\Key.cs" />
      <Compile Include="Assets\Assets\Scripts\Items\Potion.cs" />
+     <Compile Include="Assets\Assets\Scripts\Items\Shop.cs" />
      <Compile Include="Assets\Assets\Scripts\PlayerController.cs" />
      <Compile Include="Assets\Assets\Scripts\PlayerInfo.cs" />
      <Compile Include="Assets\Assets\Scripts\QuestGivers.cs" />
