--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -56,6 +56,8 @@
      <Compile Include="Assets\Assets\Scripts\Items\Key.cs" />
      <Compile Include="Assets\Assets\Scripts\Items\Potion.cs" />
      <Compile Include="Assets\Assets\Scripts\Items\Shop2.cs" />
+     <Compile Include="Assets\Assets\Scripts\MainMenu.cs" />
+     <Compile Include="Assets\Assets\Scripts\PauseMenu.cs" />
      <Compile Include="Assets\Assets\Scripts\PlayerController.cs" />
      <Compile Include="Assets\Assets\Scripts\PlayerInfo.cs" />
      <Compile Include="Assets\Assets\Scripts\QuestGivers.cs" />
