--- a/jabla.CSharp.csproj
+++ b/jabla.CSharp.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Assets\Assets\Scripts\ActivateTextAtLine.cs" />
     <Compile Include="Assets\Assets\Scripts\BaseCharacters.cs" />
     <Compile Include="Assets\Assets\Scripts\CameraController.cs" />
+    <Compile Include="Assets\Assets\Scripts\DeathMenu.cs" />
     <Compile Include="Assets\Assets\Scripts\Helper.cs" />
     <Compile Include="Assets\Assets\Scripts\Items\BaseItem.cs" />
     <Compile Include="Assets\Assets\Scripts\Items\Book.cs" />
@@ -79,6 +80,7 @@
     <Compile Include="Assets\Assets\Scripts\Items\Potion.cs" />
     <Compile Include="Assets\Assets\Scripts\Items\Shop2.cs" />
     <Compile Include="Assets\Assets\Scripts\MainMenu.cs" />
+    <Compile Include="Assets\Assets\Scripts\Menu.cs" />
     <Compile Include="Assets\Assets\Scripts\PauseMenu.cs" />
     <Compile Include="Assets\Assets\Scripts\PlayerController.cs" />
     <Compile Include="Assets\Assets\Scripts\PlayerInfo.cs" />
