Added Time Menu

--- a/jabla.CSharp.csproj
+++ b/jabla.CSharp.csproj
@@ -80,7 +80,6 @@
     <Compile Include="Assets\Assets\Scripts\Items\Potion.cs" />
     <Compile Include="Assets\Assets\Scripts\Items\Shop2.cs" />
     <Compile Include="Assets\Assets\Scripts\MainMenu.cs" />
-    <Compile Include="Assets\Assets\Scripts\Menu.cs" />
     <Compile Include="Assets\Assets\Scripts\PauseMenu.cs" />
     <Compile Include="Assets\Assets\Scripts\PlayerController.cs" />
     <Compile Include="Assets\Assets\Scripts\PlayerInfo.cs" />
@@ -91,6 +90,7 @@
     <Compile Include="Assets\Assets\Scripts\TileClasses\DoorTile.cs" />
     <Compile Include="Assets\Assets\Scripts\TileClasses\TeleportTile.cs" />
     <Compile Include="Assets\Assets\Scripts\TileClasses\Tiles.cs" />
+    <Compile Include="Assets\Assets\Scripts\TimeMenu.cs" />
     <Compile Include="Assets\Assets\Scripts\Timer.cs" />
     <Compile Include="Assets\Assets\Scripts\WorldDraw.cs" />
   </ItemGroup>
