--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -61,15 +61,18 @@
      <Compile Include="Assets\Assets\Scripts\PlayerController.cs" />
      <Compile Include="Assets\Assets\Scripts\PlayerInfo.cs" />
      <Compile Include="Assets\Assets\Scripts\QuestGivers.cs" />
+     <Compile Include="Assets\Assets\Scripts\Sister.cs" />
      <Compile Include="Assets\Assets\Scripts\TextBoxManager.cs" />
      <Compile Include="Assets\Assets\Scripts\TextImporter.cs" />
      <Compile Include="Assets\Assets\Scripts\TileClasses\DangerousTile.cs" />
      <Compile Include="Assets\Assets\Scripts\TileClasses\DoorTile.cs" />
      <Compile Include="Assets\Assets\Scripts\TileClasses\Shop2.cs" />
+     <Compile Include="Assets\Assets\Scripts\TileClasses\SpecialDoor.cs" />
      <Compile Include="Assets\Assets\Scripts\TileClasses\TeleportTile.cs" />
      <Compile Include="Assets\Assets\Scripts\TileClasses\Tiles.cs" />
      <Compile Include="Assets\Assets\Scripts\TimeMenu.cs" />
      <Compile Include="Assets\Assets\Scripts\Timer.cs" />
+     <Compile Include="Assets\Assets\Scripts\WinMenu.cs" />
      <Compile Include="Assets\Assets\Scripts\WorldDraw.cs" />
      <None Include="Assets\Assets\Text\NPC_Speech.txt" />
      <None Include="Assets\Assets\Text\Dialog Player.txt" />
