Fixed something in the map which made it impossible to get to troll.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -71,6 +71,7 @@
      <Compile Include="Assets\Assets\Scripts\characters\QuestGivers.cs" />
      <Compile Include="Assets\Assets\Scripts\characters\Sister.cs" />
      <Compile Include="Assets\Assets\Scripts\characters\TextBoxManager.cs" />
+     <None Include="Assets\ProjectSettings\ProjectVersion.txt" />
  <Reference Include="UnityEngine.Networking">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/Networking/UnityEngine.Networking.dll</HintPath>
  </Reference>
